syntax = "proto3";

option java_package = "com.sundayting.wancompose.protobuf";
option java_outer_classname = "CookieProtobuf";

message CookiesProto {


    message Cookie {
        string value = 1;
        int64 expires_at = 2;
        string domain = 3;
        string path = 4;
        bool secure = 5;
        bool http_only = 6;
        int32 max_age = 7;
    }

    message CookieMap {
        map<string, Cookie> cookies = 1;
    }

    map<string, CookieMap> cookies_for_host = 1;

}
